--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="about-content">
                <div class="column left"><img src="images/img8.jpg" alt=""></div>
             <div class="column right">
-                <div class="text">I'm Mohit and I'm a <span class="typing-2">Web Developer</span></div>
+                <div class="text">I'm Mohit and I'm a Aspiring <span class="typing-2">Web Developer</span></div>
                 <p>I'm a passionate web developer with a strong foundation in creating dynamic, responsive, and user-friendly websites. With a deep understanding of both front-end and back-end technologies, I enjoy turning complex problems into elegant digital solutions. I specialize in<span class="skill_name"> HTML, CSS, JavaScript, jQuery, Bootstrap</span> and modern frameworks like <span class="skill_name">React JS</span>, while also having good knowledge in server-side development with <span class="skill_name">Python and MySQL</span>. I am also learning <span class="skill_name">Python Full Stack Development</span> from DUCAT, Noida.
 
                     My approach to web development is centered around delivering clean, efficient code that aligns with best practices. I'm always eager to learn new technologies and stay updated with the latest trends in the industry to ensure my work remains innovative and effective.</p>
@@ -203,7 +203,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, animi? Sequi, doloremque animi? Eveniet ipsa officia commodi quo aspernatur quibusdam.</p>
+                    <p>I'm always open to new opportunities and project ideas! Whether you have a question about my work, a potential project you'd like to discuss, or any other inquiries, feel free to reach out. I'm eager to connect with fellow developers, collaborators, and recruiters. Please use the contact form below or email me directly at following Email. I look forward to hearing from you and exploring how we can work together!</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
