--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@
                 </div>
                 <div class="card">
                     <div class="box project-link">
-                        <img src="images/cafe.jpg" alt="">
-                        <a href="https://mohitvermag.github.io/Mumma-s/" target="_blank">
-                        <div class="text">Cafe Website</div>
-                        <p>(Not Responsive)Using HTML, CSS, Bootstrap, Javascript</p>
+                        <img src="images/weather.jpg" alt="">
+                        <a href="https://mohitvermag.github.io/Weather-Website/" target="_blank">
+                        <div class="text">Weather Website</div>
+                        <p>Responsive Weather website Using HTML, CSS, Javascript</p>
                         </a>
                     </div>
                 </div>
