--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <p>I'm a passionate web developer with a strong foundation in creating dynamic, responsive, and user-friendly websites. With a deep understanding of both front-end and back-end technologies, I enjoy turning complex problems into elegant digital solutions. I specialize in<span class="skill_name"> HTML, CSS, JavaScript, jQuery, Bootstrap</span> and modern frameworks like <span class="skill_name">React JS, Django</span>, while also having good knowledge in server-side development with <span class="skill_name">Python, PHP and MySQL</span>. I am also doing <span class="skill_name">Python Full Stack Development Training</span> from DUCAT, Noida.
 
                     My approach to web development is centered around delivering clean, efficient code that aligns with best practices. I'm always eager to learn new technologies and stay updated with the latest trends in the industry to ensure my work remains innovative and effective.</p>
-           <a href="Mohit_Resume.pdf" target="_blank">Download CV</a>
+           <a href="Mohit_Resume_WebDev.pdf" target="_blank">Download CV</a>
            </div>
             </div>
         </div>
@@ -118,7 +118,7 @@
                     <div class="bars">
                         <div class="info">
                             <span>CSS</span>
-                            <span>70%</span>
+                            <span>90%</span>
                         </div>
                         <div class="line css"></div>
                     </div>
@@ -131,6 +131,27 @@
                     </div>
                     <div class="bars">
                         <div class="info">
+                            <span>React JS</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="line reactjs"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Node JS</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="line Python"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Express JS</span>
+                            <span>75%</span>
+                        </div>
+                        <div class="line Python"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
                             <span>Python</span>
                             <span>85%</span>
                         </div>
@@ -139,16 +160,9 @@
                     <div class="bars">
                         <div class="info">
                             <span>MySQL</span>
-                            <span>60%</span>
+                            <span>80%</span>
                         </div>
                         <div class="line MySQL"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>React JS</span>
-                            <span>70%</span>
-                        </div>
-                        <div class="line reactjs"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
@@ -156,13 +170,6 @@
                             <span>75%</span>
                         </div>
                         <div class="line PHP"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>jQuery</span>
-                            <span>80%</span>
-                        </div>
-                        <div class="line jquery"></div>
                     </div>
                 </div>
             </div>
