--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                <div class="column left"><img src="images/img8.jpg" alt=""></div>
             <div class="column right">
                 <div class="text">I'm Mohit and I'm a Aspiring <span class="typing-2">Web Developer</span></div>
-                <p>I'm a passionate web developer with a strong foundation in creating dynamic, responsive, and user-friendly websites. With a deep understanding of both front-end and back-end technologies, I enjoy turning complex problems into elegant digital solutions. I specialize in<span class="skill_name"> HTML, CSS, JavaScript, jQuery, Bootstrap</span> and modern frameworks like <span class="skill_name">React JS, Django</span>, while also having good knowledge in server-side development with <span class="skill_name">Python, PHP and MySQL</span>. I am also doing <span class="skill_name">Python Full Stack Development Training</span> from DUCAT, Noida.
+                <p>I have 5 Month Internship experience as Full Stack DEveloper in TrayiStats AI Technologies where I worked on Node JS, Express JS, MySQL, React JS, JavaScript, HTML, CSS. I'm a passionate web developer with a strong foundation in creating dynamic, responsive, and user-friendly websites. With a deep understanding of both front-end and back-end technologies, I enjoy turning complex problems into elegant digital solutions. I specialize in<span class="skill_name"> HTML, CSS, JavaScript, jQuery, Bootstrap</span> and modern frameworks like <span class="skill_name">React JS</span>, while also having good knowledge in server-side development with <span class="skill_name">Node JS, Express JS and MySQL</span>. I am also doing <span class="skill_name">Python Full Stack Development Training</span> from DUCAT, Noida.
 
                     My approach to web development is centered around delivering clean, efficient code that aligns with best practices. I'm always eager to learn new technologies and stay updated with the latest trends in the industry to ensure my work remains innovative and effective.</p>
            <a href="Mohit_Resume_WebDev.pdf" target="_blank">Download CV</a>
@@ -132,7 +132,7 @@
                     <div class="bars">
                         <div class="info">
                             <span>React JS</span>
-                            <span>70%</span>
+                            <span>75%</span>
                         </div>
                         <div class="line reactjs"></div>
                     </div>
@@ -141,14 +141,14 @@
                             <span>Node JS</span>
                             <span>80%</span>
                         </div>
-                        <div class="line Python"></div>
+                        <div class="line Node"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>Express JS</span>
                             <span>75%</span>
                         </div>
-                        <div class="line Python"></div>
+                        <div class="line Express"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
